--- a/guion_contenidos_IEEI_masterbio_UCO.html
+++ b/guion_contenidos_IEEI_masterbio_UCO.html
@@ -1,11 +1,10 @@
 <!doctype html>
 <html>
 <head>
-<meta charset='UTF-8'><meta name='viewport' content='width=device-width initial-scale=1'>
-
-<link href='https://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,700,400&subset=latin,latin-ext' rel='stylesheet' type='text/css' /><style type='text/css'>html {overflow-x: initial !important;}:root { --bg-color: #ffffff; --text-color: #333333; --select-text-bg-color: #B5D6FC; --select-text-font-color: auto; --monospace: "Lucida Console",Consolas,"Courier",monospace; --title-bar-height: 20px; }
+<meta charset='UTF-8'><meta name='viewport' content='width=device-width initial-scale=1'><style type='text/css'>html {overflow-x: initial !important;}</style>
+<style type='text/css'  id="style-base">:root { --bg-color: #ffffff; --text-color: #333333; --select-text-bg-color: #B5D6FC; --select-text-font-color: auto; --monospace: "Lucida Console",Consolas,"Courier",monospace; --title-bar-height: 20px; }
 .mac-os-11 { --title-bar-height: 28px; }
-html { font-size: 14px; background-color: var(--bg-color); color: var(--text-color); font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; -webkit-font-smoothing: antialiased; }
+html { font-size: 14px; background-color: var(--bg-color); color: var(--text-color); font-family: "Helvetica Neue", Helvetica, Arial, "Segoe UI Emoji", "SF Pro", sans-serif; -webkit-font-smoothing: antialiased; }
 h1, h2, h3, h4, h5 { white-space: pre-wrap; }
 body { margin: 0px; padding: 0px; height: auto; inset: 0px; font-size: 1rem; line-height: 1.428571; overflow-x: hidden; background: inherit; }
 iframe { margin: auto; }
@@ -14,7 +13,7 @@ a:active, a:hover { outline: 0px; }
 .in-text-selection, ::selection { text-shadow: none; background: var(--select-text-bg-color); color: var(--select-text-font-color); }
 #write { margin: 0px auto; height: auto; width: inherit; word-break: normal; overflow-wrap: break-word; position: relative; white-space: normal; overflow-x: visible; padding-top: 36px; }
 #write.first-line-indent p { text-indent: 2em; }
-#write.first-line-indent li p, #write.first-line-indent p * { text-indent: 0px; }
+#write.first-line-indent li p, #write.first-line-indent p *, #write.first-line-indent svg * { text-indent: 0px; }
 #write.first-line-indent li { margin-left: 2em; }
 .for-image #write { padding-left: 8px; padding-right: 8px; }
 body.typora-export { padding-left: 30px; padding-right: 30px; }
@@ -32,9 +31,14 @@ input[type="checkbox"], input[type="radio"] { line-height: normal; padding: 0px;
 *, ::after, ::before { box-sizing: border-box; }
 #write h1, #write h2, #write h3, #write h4, #write h5, #write h6, #write p, #write pre { width: inherit; position: relative; }
 #write svg h1, #write svg h2, #write svg h3, #write svg h4, #write svg h5, #write svg h6, #write svg p { position: static; }
+svg sub, svg sup { position: static; }
+.nodeLabel p { padding-right: 2px; padding-left: 2px; }
+.typora-export .nodeLabel p { padding-right: 0px; padding-left: 0px; }
+foreignObject { overflow: visible; }
 p { line-height: inherit; }
 h1, h2, h3, h4, h5, h6 { break-after: avoid-page; break-inside: avoid; orphans: 4; }
 p { orphans: 4; }
+li p { orphans: 1; }
 h1 { font-size: 2rem; }
 h2 { font-size: 1.8rem; }
 h3 { font-size: 1.6rem; }
@@ -219,8 +223,9 @@ mjx-container { break-inside: avoid; }
 .md-alert-text svg { fill: currentcolor; position: relative; top: 0.125em; margin-right: 1ch; overflow: visible; }
 .md-alert-text-container::after { content: attr(data-text); text-transform: capitalize; pointer-events: none; margin-right: 1ch; }
 
-
-:root {
+</style>
+<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,700,400&amp;subset=latin,latin-ext' type='text/css' />
+<style type='text/css'  id="style-theme_css">:root {
     --side-bar-bg-color: #fafafa;
     --control-text-color: #777;
 }
@@ -237,7 +242,7 @@ mjx-container { break-inside: avoid; }
 }
 
 body {
-    font-family: "Open Sans","Clear Sans", "Helvetica Neue", Helvetica, Arial, 'Segoe UI Emoji', sans-serif;
+    font-family: "Open Sans","Clear Sans", "Helvetica Neue", Helvetica, Arial, 'Segoe UI Emoji', 'SF Pro', sans-serif;
     color: rgb(51, 51, 51);
     line-height: 1.6;
 }
@@ -607,12 +612,13 @@ header, .context-menu, .megamenu-content, footer{
     background-color: #f5f8fa;
     background-image: linear-gradient( 180deg , hsla(0, 0%, 100%, 0.8), hsla(0, 0%, 100%, 0)); 
 }
+</style>
+<style type='text/css'  id="style-lp">ol, ul {padding-left: 40px}</style>
+<style type='text/css'  id="style-mac-print"> @media print { @page {margin: 0 0 0 0;} body.typora-export {padding-left: 0; padding-right: 0;} #write {padding:0;}}</style>
 
-
- @media print { @page {margin: 0 0 0 0;} body.typora-export {padding-left: 0; padding-right: 0;} #write {padding:0;}}
-</style><title>guion_contenidos_IEEI_masterbio_UCO</title>
+<title>guion_contenidos_IEEI_masterbio_UCO</title>
 </head>
 <body class='typora-export'><div class='typora-export-content'>
-<div id='write'  class=''><h1 id='contenidos-de-la-asignatura'><span>Contenidos de la asignatura</span></h1><blockquote><ul><li><p><strong><em><span>Tipo de material</span></em></strong><span>: </span><span style="display: inline-block; font-size: 12px; color: white; background-color: #029BF9; border-radius: 5px; padding: 5px; font-weight: bold;"><span> Teoría</span></span></p></li><li><p><strong><em><span>Versión</span></em></strong><span>: 2024-2025</span></p></li><li><p><strong><em><span>Asignatura (titulación)</span></em></strong><span>: Interacciones Ecológicas y Especies Invasoras (master biodiversidad UCO)</span></p></li><li><p><strong><em><span>Autor</span></em></strong><span>: Curro Bonet-García (fjbonet@uco.es)</span></p></li><li><p><strong><em><span>Duración</span></em></strong><span>: 1 hora</span></p></li></ul></blockquote><p><img src="https://raw.githubusercontent.com/aprendiendo-cosas/Te_contenidos_IEEI_masterbio_UCO/refs/tags/2024-2025/imagenes/portada.jpg" alt="portada" style="zoom:200%;" /></p><p>&nbsp;</p><h2 id='objetivos'><span>Objetivos </span></h2><p><span>El objetivo de este acto docente es presentar los contenidos de la asignatura. </span></p><p><span>A su vez, los objetivos de la asignatura son:</span></p><ul><li><p><span>Disciplinares (relacionados con la biología en general):</span></p><ul><li><p><span>Entender en profundidad el concepto de invasión biológica desde el punto de vista de las interacciones ecológicas.</span></p></li><li><p><span>Conocer casos particulares de invasioens biológicas en nuestro territorio.</span></p></li><li><p><span>Aprender algunos casos de estudio sobre intentos de erradicación y/o control de especies invasoras en nuestro territorio.</span></p></li></ul></li><li><p><span>Transversales (implican a distintas disciplinas):</span></p><ul><li><p><span>Mejorar las habilidades de búsqueda y análisis de bibliografía científica.</span></p></li><li><p><span>Avanzar en la construcción de hilos argumentales y su exposición oral.</span></p></li><li><p><span>Aprender a usar herramientas de IA como promotoras del aprendizaje profundo.</span></p></li><li><p><span>Usar los mapas mentales y conceptuales como herramientas de síntesis de información.</span></p></li></ul></li></ul><h2 id='hilo-argumental'><span>Hilo argumental</span></h2><p><span>En </span><a href='https://github.com/aprendiendo-cosas/Te_contenidos_IEEI_masterbio_UCO/raw/refs/tags/2024-2025/presentacion/presentacion_asignatura.pptx'><span>esta</span></a><span> presentación se muestran los contenidos de la clase.</span></p><hr /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p><p><a href='https://github.com/aprendiendo-cosas/Te_contenidos_IEEI_masterbio_UCO/archive/refs/tags/2024-2025.zip'><span>Aquí</span></a><span> puedes descargar un archivo .zip que contiene este guión en formato html y todo el material que incluye.</span></p><hr /><p><span>Haz click </span><a href='https://github.com/aprendiendo-cosas/Te_contenidos_IEEI_masterbio_UCO/releases'><span>aquí</span></a><span> para ver cómo ha cambiado este guión en los distintos cursos académicos.</span></p><hr /> <p xmlns:cc="http://creativecommons.org/ns#" >El contenido de este repositorio se puede utilizar bajo la siguiente licencia:  <a  href="https://creativecommons.org/licenses/by-nc-sa/4.0/?ref=chooser-v1"  target="_blank" rel="license noopener noreferrer"  style="display:inline-block;">CC BY-NC-SA 4.0<img  style="height:22px!important;margin-left:3px;vertical-align:text-bottom;"   src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1"  alt=""><img  style="height:22px!important;margin-left:3px;vertical-align:text-bottom;"   src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1"  alt=""><img  style="height:22px!important;margin-left:3px;vertical-align:text-bottom;"   src="https://mirrors.creativecommons.org/presskit/icons/nc.svg?ref=chooser-v1"  alt=""><img  style="height:22px!important;margin-left:3px;vertical-align:text-bottom;"   src="https://mirrors.creativecommons.org/presskit/icons/sa.svg?ref=chooser-v1"  alt=""></a></p> <p>Esta licencia no aplica a enlaces a artículos, libros o imágenes no originales. Estos productos tienen su licencia correspondiente.</p><p>&nbsp;</p></div></div>
+<div id='write'  class=''><h1 id='contenidos-de-la-asignatura'><span>Contenidos de la asignatura</span></h1><blockquote><ul><li><p><strong><em><span>Tipo de material</span></em></strong><span>: </span><span style="display: inline-block; font-size: 12px; color: white; background-color: #029BF9; border-radius: 5px; padding: 5px; font-weight: bold;"><span> Teoría</span></span></p></li><li><p><strong><em><span>Versión</span></em></strong><span>: 2025-2026</span></p></li><li><p><strong><em><span>Asignatura (titulación)</span></em></strong><span>: Interacciones Ecológicas y Especies Invasoras (master biodiversidad UCO)</span></p></li><li><p><strong><em><span>Autor</span></em></strong><span>: Curro Bonet-García (fjbonet@uco.es)</span></p></li><li><p><strong><em><span>Duración</span></em></strong><span>: 1 hora</span></p></li></ul></blockquote><p><img src="https://raw.githubusercontent.com/aprendiendo-cosas/Te_contenidos_IEEI_masterbio_UCO/refs/tags/2024-2025/imagenes/portada.jpg" alt="portada" style="zoom:200%;" /></p><p>&nbsp;</p><h2 id='objetivos'><span>Objetivos </span></h2><p><span>El objetivo de este acto docente es presentar los contenidos de la asignatura. </span></p><p><span>A su vez, los objetivos de la asignatura son:</span></p><ul><li><p><span>Disciplinares (relacionados con la biología en general):</span></p><ul><li><p><span>Entender en profundidad el concepto de invasión biológica desde el punto de vista de las interacciones ecológicas.</span></p></li><li><p><span>Conocer casos particulares de invasioens biológicas en nuestro territorio.</span></p></li><li><p><span>Aprender algunos casos de estudio sobre intentos de erradicación y/o control de especies invasoras en nuestro territorio.</span></p></li></ul></li><li><p><span>Transversales (implican a distintas disciplinas):</span></p><ul><li><p><span>Mejorar las habilidades de búsqueda y análisis de bibliografía científica.</span></p></li><li><p><span>Avanzar en la construcción de hilos argumentales y su exposición oral.</span></p></li><li><p><span>Aprender a usar herramientas de IA como promotoras del aprendizaje profundo.</span></p></li><li><p><span>Usar los mapas mentales y conceptuales como herramientas de síntesis de información.</span></p></li></ul></li></ul><h2 id='hilo-argumental'><span>Hilo argumental</span></h2><p><span>En </span><a href='https://github.com/aprendiendo-cosas/Te_contenidos_IEEI_masterbio_UCO/raw/refs/heads/main/presentacion/presentacion_asignatura.pptx'><span>esta</span></a><span> presentación se muestran los contenidos de la clase.</span></p><hr /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p><p><a href='https://github.com/aprendiendo-cosas/Te_contenidos_IEEI_masterbio_UCO/archive/refs/tags/2024-2025.zip'><span>Aquí</span></a><span> puedes descargar un archivo .zip que contiene este guión en formato html y todo el material que incluye.</span></p><hr /><p><span>Haz click </span><a href='https://github.com/aprendiendo-cosas/Te_contenidos_IEEI_masterbio_UCO/releases'><span>aquí</span></a><span> para ver cómo ha cambiado este guión en los distintos cursos académicos.</span></p><hr /> <p xmlns:cc="http://creativecommons.org/ns#" >El contenido de este repositorio se puede utilizar bajo la siguiente licencia:  <a  href="https://creativecommons.org/licenses/by-nc-sa/4.0/?ref=chooser-v1"  target="_blank" rel="license noopener noreferrer"  style="display:inline-block;">CC BY-NC-SA 4.0<img  style="height:22px!important;margin-left:3px;vertical-align:text-bottom;"   src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1"  alt=""><img  style="height:22px!important;margin-left:3px;vertical-align:text-bottom;"   src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1"  alt=""><img  style="height:22px!important;margin-left:3px;vertical-align:text-bottom;"   src="https://mirrors.creativecommons.org/presskit/icons/nc.svg?ref=chooser-v1"  alt=""><img  style="height:22px!important;margin-left:3px;vertical-align:text-bottom;"   src="https://mirrors.creativecommons.org/presskit/icons/sa.svg?ref=chooser-v1"  alt=""></a></p> <p>Esta licencia no aplica a enlaces a artículos, libros o imágenes no originales. Estos productos tienen su licencia correspondiente.</p><p>&nbsp;</p></div></div>
 </body>
 </html>
